RESOLVED FIXED185142
REGRESSION(r230914) Selecting text on this apple.com page makes it vanish
https://bugs.webkit.org/show_bug.cgi?id=185142
Summary REGRESSION(r230914) Selecting text on this apple.com page makes it vanish
alan
Reported 2018-04-30 14:10:34 PDT
Attachments
Patch (6.11 KB, patch)
2018-04-30 14:14 PDT, alan
no flags
alan
Comment 1 2018-04-30 14:14:33 PDT
WebKit Commit Bot
Comment 2 2018-04-30 16:16:47 PDT
Comment on attachment 339147 [details] Patch Clearing flags on attachment: 339147 Committed r231178: <https://trac.webkit.org/changeset/231178>
WebKit Commit Bot
Comment 3 2018-04-30 16:16:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.