REGRESSION(r230914) Selecting text on this apple.com page makes it vanish https://bugs.webkit.org/show_bug.cgi?id=185142 <rdar://problem/39821446>

Reviewed by Simon Fraser.

Source/WebCore:

Set the overflow rect on the inline textbox when needed.

Test: fast/text/simple-line-layout-selection-with-overflow.html

* rendering/SimpleLineLayoutFunctions.cpp:
(WebCore::SimpleLineLayout::initializeInlineTextBox):
(WebCore::SimpleLineLayout::generateLineBoxTree):
(WebCore::SimpleLineLayout::initializeInlineBox): Deleted.

LayoutTests:

* fast/text/simple-line-layout-selection-with-overflow-expected.html: Added.
* fast/text/simple-line-layout-selection-with-overflow.html: Added.


Canonical link: https://commits.webkit.org/200635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231178 268f45cc-cd09-0410-ab3c-d52691b4dbfc